fixing icon size on mobile

--- a/scss/kevincrafts.scss
+++ b/scss/kevincrafts.scss
@@ -107,9 +107,12 @@ h2.slogan {
   }
 }
 /* SOCIAL */
+.social h2 {
+  font-size: 24px;
+}
 @media screen and (min-width: 480px) {
   .social h2 {
-    font-size: 40px;
+    font-size: 36px;
   }
 }
 @media screen and (min-width: 600px) {
